--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,28 +7,28 @@
          
         <h3> Top Entertainment News Sources</h3>
         <hr>
-
+        {{article.image}}
         {{ macro.displaySourceList(entertainment_sources)}}
 
 	<!-- Technology News Section  -->
          
         <h3> Top Technology News Sources</h3>
         <hr>
-
+        {{article.image}}
         {{ macro.displaySourceList(technology_sources)}}
 	
 	<!-- Business News Section  -->
 	
         <h3> Top Business News </h3>
         <hr>
-
+        {{article.image}}
         {{ macro.displaySourceList(sources)}}
 
         <!-- Sports News Section  -->
          
         <h3> Top Sports News Sources</h3>
         <hr>
-
+        {{article.image}}
         {{ macro.displaySourceList(sports_sources)}}
 	
 </div>
