--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -2,8 +2,8 @@
 {% block content%}
 <div class="container">
 	<div class="jumbotron text-center">
-		<h2> Whooooop!! The page you are trying to access doesnt exist.</h2>
-		<p> Wanna go Home?</p><a href="/" class="btn btn-success">Home</a>
+		<h2> Whooooops!! The page you are trying to access doesn't exist.</h2>
+		<p>Do you want to go to the Home page?</p><a href="/" class="btn btn-success">Home</a>
 	</div>
 </div>
 {% endblock %}
