--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -3,7 +3,7 @@
 <div class="container">
 
 	<!-- Popular movie section  -->
-        <h3> Top Headlines</h3>
+        <h3> Headlines </h3>
         {% for article_row in articles | batch(4)%}
 
 	        <div class="row">
